# workstation

./: README.md  WazuhDoc.md  WazuhServer.pages  active_directory.md  proxmox.md  rust.md
WazuhDoc/: WazuhDoc.md  WazuhMonitoringDoc.md
site/: .envexample  Cargo.toml  Dockerfile  docker-compose.yml
site/migrations/2020-04-18-094956_create_user/: up.sql
site/src/: admin.rs  database.rs  forms.rs  lib.rs  main.rs  models.rs  regex.rs  schema.rs  statistics.rs  user.rs  wifi.rs
site/src/forms/: create_user.rs
site/static/css/: admin.css  create.css  edit.css  style.css  url-lost.css
site/static/js/: admin.js  edit.js  entryValidation.js  login.js  noty.js  particles-settings.js  password.js  user.js  zxcvbn.js
site/static/js/lib/: particles-settings.js
site/templates/: admin.html.tera  base.html.tera  create.html.tera  edit.html.tera  index.html.tera  login.html.tera  url-lost.html.tera
site/templates/error/: 404.html.tera
web/: addUserToAD.txt  bdd.txt  formulaire.php  newformulaire.php
