[package]
name = "site"
version = "0.1.0"
authors = ["Guillaume Blanc de Lanaute <guillaume.blanc-de-lanaute@isen.yncrea.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["tera_templates"]
