[package]
name = "site"
version = "0.1.0"
authors = ["Guillaume Blanc de Lanaute <guillaume.blanc-de-lanaute@isen.yncrea.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
serde = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3.0", features = ["postgres"] }
diesel_migrations = "1.3.0"
dotenv = "0.10"
md5 = "0.7.0"
rand = "0.7.3"
regex = "1"
zxcvbn = "2"
openssl = "0.10"

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
default-features = false
features = ["tera_templates", "serve", "json", "diesel_postgres_pool"]
